tests/snapshots/integration__integration_tests__post_start_commands__post_start_template_expansion.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature/test
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpIvjDOu
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
✅ [32mCreated new worktree for [1m[32mfeature/test[0m[0m
  [2mPath: [REPO].feature-test[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
🔄 [36mExecuting: echo 'Repo: main' > info.txt[0m
🔄 [36mExecuting: echo 'Branch: feature-test' >> info.txt[0m
🔄 [36mExecuting: echo 'Worktree: [REPO].feature-test' >> info.txt[0m
🔄 [36mExecuting: echo 'Root: [REPO]' >> info.txt[0m
