tests/snapshots/integration__integration_tests__post_start_commands__post_start_with_approval.snap
---
source: tests/integration_tests/post_start_commands.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - feature
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpo8Mro1
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
Setup complete
✅ [32mCreated new worktree for [1m[32mfeature[0m[0m
  [2mPath: [REPO].feature[0m

To enable automatic cd, run: wt configure-shell

----- stderr -----
🔄 [36mExecuting: echo 'Setup complete'[0m
